[package]
name = "azure_jwt_async"
version = "0.3.0"
authors = ["Vasco Serrano <main@neffware.com>", "Carl Fredrik Samson <cf@samson.no>"]
edition = "2021"
repository = "https://github.com/0xNeffarion/azure-jwt-async"
documentation = "https://docs.rs/azure-jwt/"
readme = "README.md"
license = "MIT"
keywords = ["azure", "token", "jwt", "jwk", "validation", "async"]
categories = ["authentication"]
description = """
A simple JWT validator for Microsoft Azure Id tokens.
"""

[dependencies]
jsonwebtoken = { version = "7.2.0" }
reqwest = {version = "0.11.23", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.193", features = ["derive"] }
chrono = "0.4.31"
async-recursion = "1.0.5"

[dev-dependencies]
criterion = "0.3.4"
base64 = "0.13.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-test = "0.4.3"

