[package]
name = "azure_jwt_async"
version = "0.3.0"
authors = ["Vasco Serrano <main@neffware.com>", "Carl Fredrik Samson <cf@samson.no>"]
edition = "2021"
repository = "https://github.com/0xNeffarion/azure-jwt-async"
documentation = "https://docs.rs/azure-jwt-async/"
readme = "README.md"
license = "MIT"
keywords = ["azure", "token", "jwt", "jwk", "validation", "async"]
categories = ["authentication"]
description = "A simple JWT validator for Microsoft Azure Id tokens."

[dependencies]
jsonwebtoken = { version = "7.2.0", default-features = false }
reqwest = {version = "0.11.23", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.31" }
async-recursion = { version = "1.0.5" }
serde-aux = { version = "4.3.1", default-features = false }

[dev-dependencies]
base64 = "0.13.0"
tokio = { version = "1.35.1", default-features = false, features = ["macros"] }
tokio-test = "0.4.3"

